graph looks even better

--- a/src/graph/strongly-connected-components-tikzpicture/graph.tex
+++ b/src/graph/strongly-connected-components-tikzpicture/graph.tex
@@ -5,9 +5,9 @@
 \pgfdeclarelayer{background}
 \pgfsetlayers{background,main}
 \begin{tikzpicture}
-	[very thick,every circle node/.style={draw,outer sep=1.1mm}, every path/.style={->}]
+	[scale=1.3,very thick,every circle node/.style={draw,inner sep=0.18cm,outer sep=1.1mm,fill=brown!30}, every path/.style={->}]
 
-	\draw [help lines] (-1,-2) grid (7,2);
+	%\draw[help lines] (-1,-2) grid (7,2);
 	\node[circle] (0) at (0,0) {0};
 	\node[circle] (1) at (1,1) {1};
 	\node[circle] (2) at (3,1) {2};
@@ -21,7 +21,7 @@
 
 	\path (0) edge (1);
 	\path (0) edge[bend left=20] (7);
-	\path (1) edge[loop below] (1);
+    \path (1) edge[loop below] (1);
 	\path (1) edge[bend left=20] (2);
 	\path (2) edge[bend left=20] (1);
 	\path (2) edge (5);
@@ -40,10 +40,10 @@
 	\path (9) edge[bend left=20] (4);
 
 	\begin{pgfonlayer}{background}
-        \draw[thick, red, fill=red!20!white] plot [smooth cycle,tension=0.6] coordinates{(0.7,0.3)(0.9,1.5)(5,1.5)(5.4,0.6)(4.25,-.4)(3,-.3)(1.5,-.4)};
+		\draw[thick, red, fill=red!20!white] plot [smooth cycle,tension=0.65] coordinates{(0.65,1.3)(4.7,1.52)(5.4,0.7)(4.25,-.4)(3,-.33)(1.5,-.4)};
 		\draw[thick, green, fill=green!20!white] plot [smooth cycle,tension=0.7] coordinates{(0.2,0.4)(1.5,-0.9)(.9,-1.5)(-.45,-.1)};
-		\draw[thick, blue, fill=blue!20!white] plot [smooth cycle,tension=0.7] coordinates{(5.8,0.5)(4.5,-0.9)(5.1,-1.5)(6.6,-.1)};
-        \draw[thick, yellow, fill=yellow!20!white] plot [smooth cycle,tension=0.7] coordinates{(3,-0.5)(3.5,-1)(3,-1.5)(2.5,-1)};
+		\draw[thick, blue, fill=blue!20!white] plot [smooth cycle,tension=0.7] coordinates{(5.8,0.5)(4.45,-0.8)(5.1,-1.5)(6.6,-.1)};
+		\draw[thick, yellow, fill=yellow!20!white] plot [smooth cycle,tension=0.9] coordinates{(3,-0.5)(3.6,-1)(3,-1.5)(2.4,-1)};
 	\end{pgfonlayer}
 \end{tikzpicture}
 
