--- a/src/graph/strongly-connected-components-tikzpicture/graph.tex
+++ b/src/graph/strongly-connected-components-tikzpicture/graph.tex
@@ -8,16 +8,16 @@
 	[scale=1.3,very thick,every circle node/.style={draw,inner sep=0.18cm,outer sep=1.1mm,fill=brown!30}, every path/.style={->}]
 
 	%\draw[help lines] (-1,-2) grid (7,2);
-	\node[circle] (0) at (0,0) {0};
-	\node[circle] (1) at (1,1) {1};
-	\node[circle] (2) at (3,1) {2};
-	\node[circle] (3) at (5,1) {3};
-	\node[circle] (4) at (6,0) {4};
-	\node[circle] (5) at (4,0) {5};
-	\node[circle] (6) at (2,0) {6};
-	\node[circle] (7) at (1,-1) {7};
-	\node[circle] (8) at (3,-1) {8};
-	\node[circle] (9) at (5,-1) {9};
+	\node[circle] (0) at (0,0) {\textbf0};
+	\node[circle] (1) at (1,1) {\textbf1};
+	\node[circle] (2) at (3,1) {\textbf2};
+	\node[circle] (3) at (5,1) {\textbf3};
+	\node[circle] (4) at (6,0) {\textbf4};
+	\node[circle] (5) at (4,0) {\textbf5};
+	\node[circle] (6) at (2,0) {\textbf6};
+	\node[circle] (7) at (1,-1) {\textbf7};
+	\node[circle] (8) at (3,-1) {\textbf8};
+	\node[circle] (9) at (5,-1) {\textbf9};
 
 	\path (0) edge (1);
 	\path (0) edge[bend left=20] (7);
